Fixed userType and added privileges