@@ -8,11 +8,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -48,10 +50,13 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
             User user = userRepository.findById(userId).orElse(null);
 
-            if (jwtService.isTokenValid(token)) {
+            if (user != null && jwtService.isTokenValid(token)) {
+                SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                        "ROLE_" + user.getUserType().name()
+                );
                 UsernamePasswordAuthenticationToken auth =
                         new UsernamePasswordAuthenticationToken(
-                                user, null, List.of()
+                                user, null, Collections.singletonList(authority)
                         );
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
